[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
subxt = "0.38"
tokio = { version = "1", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["trace"] }
axum = "0.7.9"
hyper = "1.5.1"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"