[package]
name = "BlockchainService"
version = "0.1.0"
edition = "2021"

[dependencies]
subxt = "0.38"
tokio = { version = "1", features = ["full"] }
axum = "0.7.9"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"] }
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"